@@ -1,7 +1,7 @@
 /* CSS for Search page */
 
 .typeahead, .tt-query, .tt-hint {width:396px; height:30px; padding:8px 12px; font-size:24px; line-height:30px; -webkit-border-radius:0; -moz-border-radius:0; border-radius:0; outline:none;}
-.typeahead, input {background-color:transparent !important; border-bottom:2px solid #fff !important; border-radius:0 !important; }
+.typeahead {background-color:transparent !important; border-bottom:2px solid #fff !important; border-radius:0 !important; }
 .typeahead:focus {border:2px solid #0097cf;}
 .tt-hint {color:#999;}
 .tt-menu {width:100%; margin:12px 0; padding:8px 0; background-color:#fff;max-height:320px; overflow-y:auto;}
@@ -40,4 +40,5 @@ a#search_link		{display:block; text-align:center; margin:0 auto; font-size:1.6em
 a#search_link span	{display:block; font-style:italic; font-size:0.6em; padding-top:5px;}
 
 
-
+/*	WIP explore page	*/
+.typeahead.explore {width:934px; margin-bottom:40px; background-color:transparent !important; border:1px solid #fff !important; border-radius:0 !important; }
