@@ -924,7 +924,7 @@ IATI出版社
 #search_sector_txt
 扇形
 
-#search_sectorcategory_txt
+#search_sectorgroup_txt
 行业类别
 
 #search_publisher_txt
