@@ -927,6 +927,9 @@ Sector
 #search_sectorcategory_txt
 Sector Category
 
+#search_sectorgroup_txt
+Sector Group
+
 #search_publisher_txt
 Publisher
 
@@ -938,6 +941,9 @@ DISCOVER
 
 #search_text_txt
 Text Search
+
+#search_button0_txt
+Explore Results
 
 #search_button1_txt
 Discover Results
