@@ -926,8 +926,8 @@ Donateur
 #search_sector_txt
 Secteur
 
-#search_sectorcategory_txt
-Secteur Catégorie
+#search_sectorgroup_txt
+Groupe Sectoriel
 
 #search_publisher_txt
 Editeur
