@@ -923,8 +923,8 @@ IATI प्रकाशक
 #search_sector_txt
 क्षेत्र
 
-#search_sectorcategory_txt
-सेक्टर श्रेणी
+#search_sectorgroup_txt
+सेक्टर समूह
 
 #search_publisher_txt
 प्रकाशक
