@@ -926,8 +926,8 @@ IATI出版
 #search_sector_txt
 セクター
 
-#search_sectorcategory_txt
-セクターカテゴリー
+#search_sectorgroup_txt
+セクターグループ
 
 #search_publisher_txt
 出版社
