@@ -923,8 +923,8 @@ Donante
 #search_sector_txt
 Sector
 
-#search_sectorcategory_txt
-Sector Categoría
+#search_sectorgroup_txt
+Grupo Sectorial
 
 #search_publisher_txt
 Editor
