@@ -1,8 +1,17 @@
+Development Portal (2017-03-06 shi)
+==============================
+Start on Explore section for revised search inputs
+Update new layout for search sections 
+Update css when confirmed
+Updated typehead for explore section
+
+
 Development Portal (2017-02-27 shi)
 ==============================
 Fix roles placement for participating-org
 Fix blocks for period so they are table-cells
 Switch sector icons for search
+Renamed sector category to sector group
 
 
 Development Portal (2017-02-24 shi)
